test/Fail/Issue2480false2.err
Issue2480false2.agda:19.18-22: error: [UnequalTerms]
x != y of type Bool
when checking that the expression refl has type f x ≡ f y
